// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagDelete Dialog observer Renders the component 1`] = `
<fragment-stub><span><div data-test="play-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`TagDelete Dialog owner Renders the component 1`] = `
<fragment-stub><span><div data-test="play-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`TagDelete Icon observer Renders the component 1`] = `
<fragment-stub><span><div data-test="play-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`TagDelete Icon owner Renders the component 1`] = `
<fragment-stub><span><div data-test="play-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="play-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
